--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -185,6 +185,11 @@
   .tags {
     margin-left: 5%;
     font-size: 13px;
+    height: 6vh;
+  }
+
+  .top-tags {
+    margin-top: 1vh;
   }
 
   .container {
@@ -192,7 +197,7 @@
     min-height: auto;
     width: 100vw;
     padding-inline: 0;
-    margin-top: 4vh;
+    margin-top: 1vh;
   }
 
   .about-page,
